[tool.poetry]
name = "radiohead-semantic-statistics"
version = "0.1.0"
description = ""
authors = ["dudderThugger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
kagglehub = "^0.3.4"
nltk = "^3.9.1"
numpy = "1.26.3"
gensim = "^4.3.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
